--- a/service-login/package.json
+++ b/service-login/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^4.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.1",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.6",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
     "@types/jsonwebtoken": "^8.3.7",
     "@types/mongoose": "^5.7.1",
