--- a/service-login/package.json
+++ b/service-login/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.1",
     "morgan": "^1.9.1",
@@ -27,6 +28,7 @@
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
+    "@types/http-status-codes": "^1.2.0",
     "@types/jsonwebtoken": "^8.3.7",
     "@types/mongoose": "^5.7.1",
     "@types/morgan": "^1.7.37",
