--- a/service-login/package.json
+++ b/service-login/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.1",
     "morgan": "^1.9.1",
+    "multer": "^1.4.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0"
   },
@@ -32,6 +33,7 @@
     "@types/jsonwebtoken": "^8.3.7",
     "@types/mongoose": "^5.7.1",
     "@types/morgan": "^1.7.37",
+    "@types/multer": "^1.4.7",
     "@types/passport": "^1.0.2",
     "@types/passport-jwt": "^3.0.3",
     "tsc-watch": "^4.1.0",
