--- a/service-login/package.json
+++ b/service-login/package.json
@@ -22,7 +22,8 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.3",
     "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "socket.io": "^4.1.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
