--- a/angular-ui/package.json
+++ b/angular-ui/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
     "bootstrap": "^5.0.2",
+    "ngx-socket-io": "^4.1.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -44,7 +45,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.2",
-    "ngx-socket-io": "^4.0.0"
+    "typescript": "~4.1.2"
   }
 }
