--- a/angular-ui/package.json
+++ b/angular-ui/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
     "bootstrap": "^5.0.2",
+    "file-saver": "^2.0.5",
     "ngx-socket-io": "^4.1.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
@@ -32,6 +33,7 @@
     "@angular-devkit/build-angular": "~0.1102.1",
     "@angular/cli": "~11.2.1",
     "@angular/compiler-cli": "~11.2.1",
+    "@types/file-saver": "^2.0.4",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
