--- a/service-login/package.json
+++ b/service-login/package.json
@@ -5,14 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "tsc-watch --onSuccess \"node dist/index.js\"",
+    "dev": "nodemon ./src/index.ts",
     "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^4.0.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -21,12 +21,13 @@
     "mongoose": "^5.9.1",
     "morgan": "^1.9.1",
     "multer": "^1.4.3",
+    "nodemon": "^2.0.19",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "socket.io": "^4.0.0"
+    "socket.io": "^4.0.0",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
@@ -37,7 +38,6 @@
     "@types/multer": "^1.4.7",
     "@types/passport": "^1.0.2",
     "@types/passport-jwt": "^3.0.3",
-    "tsc-watch": "^4.1.0",
     "typescript": "^4.5.2"
   }
 }
